fix(editor): share link doesn't fit on one line toolbar with half size window

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,12 @@ a {
 		margin-left: 2px!important;
 	}
 }
+@media (max-width: 1000px) {
+	.buttons .url-share {
+		width: 80px !important;
+		background-position-x: 55px!important;
+	}
+}
 #working {
     position: fixed;
     top: 0;
